Bug 364408 - Version info dialog comes up mostly empty
Summary: Version info dialog comes up mostly empty
Status: RESOLVED FIXED
Alias: None
Product: choqok
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: Git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.6
Assignee: Mehrdad Momeny
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-17 07:00 UTC by Iris Morelle
Modified: 2016-08-04 10:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.6
Sentry Crash Report:


Attachments
Patch that fixes the issue. (587 bytes, patch)
2016-06-17 07:01 UTC, Iris Morelle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Iris Morelle 2016-06-17 07:00:33 UTC
On the current Git master version (at commit 136e9f27f25d85d2573d9f0eede6963818cdba20), the Help -> About Choqok dialog comes up mostly empty except for the library versions on the Version tab.

I'm attaching a patch that fixes the issue for me.

Reproducible: Always

Steps to Reproduce:
1. Navigate to the Help menu
2. Choose About Choqok

Actual Results:  
All tabs are missing information, except as mentioned above

Expected Results:  
Display the software description ("KDE Micro-Blogging Client"), copyright and license info, list of authors, etc.

Using KDE Frameworks version 5.22.0 and Qt 5.6.1 on Debian unstable.
Comment 1 Iris Morelle 2016-06-17 07:01:23 UTC
Created attachment 99543 [details]
Patch that fixes the issue.
Comment 2 Andrea Scarpino 2016-06-17 07:12:10 UTC
Thank you!

If it's possible please send the patch on https://git.reviewboard.kde.org/r/ otherwise I'll apply this in the evening.
Comment 3 Iris Morelle 2016-06-17 07:18:01 UTC
(In reply to Andrea Scarpino from comment #2)
> Thank you!
> 
> If it's possible please send the patch on https://git.reviewboard.kde.org/r/
> otherwise I'll apply this in the evening.

Done: https://git.reviewboard.kde.org/r/128220/
Comment 4 Andrea Scarpino 2016-06-17 18:58:12 UTC
Git commit d1fe017abcf4e7ba4b5f41a618431403ae98c3b1 by Andrea Scarpino, on behalf of Ignacio R. Morelle.
Committed on 17/06/2016 at 18:57.
Pushed by scarpino into branch 'master'.

Fix for mostly-empty version dialog contents
REVIEW:128220

M  +2    -1    choqok/main.cpp

http://commits.kde.org/choqok/d1fe017abcf4e7ba4b5f41a618431403ae98c3b1
Comment 5 Andrea Scarpino 2016-06-19 13:07:32 UTC
Git commit 5b3f13e44203bfc3869ef1a5a53d5b79ebce24fa by Andrea Scarpino, on behalf of Ignacio R. Morelle.
Committed on 19/06/2016 at 13:07.
Pushed by scarpino into branch 'master'.

Better fix for version dialog and startup warnings

REVIEW:128236

M  +13   -8    choqok/choqokapplication.cpp
M  +2    -0    choqok/choqokapplication.h
M  +13   -3    choqok/main.cpp

http://commits.kde.org/choqok/5b3f13e44203bfc3869ef1a5a53d5b79ebce24fa