Better fix for version dialog and startup warnings

REVIEW:128236
BUG:364408